--- a/GripitServerTests/GripitServerTests.csproj
+++ b/GripitServerTests/GripitServerTests.csproj
@@ -77,6 +77,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DataFrameProcessorTests.cs" />
     <Compile Include="DataReaderServiceTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
