--- a/GripitServer/packages.config
+++ b/GripitServer/packages.config
@@ -7,4 +7,5 @@
   <package id="Rx-Main" version="2.3.0-beta2" targetFramework="net452" />
   <package id="Rx-PlatformServices" version="2.3.0-beta2" targetFramework="net452" />
   <package id="SerialPortLib" version="1.0.11" targetFramework="net452" />
+  <package id="SimpleInjector" version="3.2.0-alpha2" targetFramework="net452" />
 </packages>
