--- a/GripitServerTests/GripitServerTests.csproj
+++ b/GripitServerTests/GripitServerTests.csproj
@@ -79,7 +79,9 @@
   <ItemGroup>
     <Compile Include="DataFrameProcessorTests.cs" />
     <Compile Include="DataReaderServiceTests.cs" />
+    <Compile Include="GripitProcessorTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="HoldStateProcessorTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
