--- a/GripitServer/GripitServer.csproj
+++ b/GripitServer/GripitServer.csproj
@@ -71,6 +71,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Mocks\MockDataPortal.cs" />
     <Compile Include="Models\ClimbingHoldState.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
