--- a/GripitServer/GripitServer.csproj
+++ b/GripitServer/GripitServer.csproj
@@ -71,7 +71,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Mocks\INamedPipeClient.cs" />
     <Compile Include="Mocks\MockDataPortal.cs" />
+    <Compile Include="Mocks\MockNamedPipeClient.cs" />
     <Compile Include="Models\ClimbingHoldState.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
